# demand-v2

./: .gitignore  README.md  TUTORIAL.md  blend.py  forecast.py  pyproject.toml  scrape_typhoon.py
data/derived/: base_preds_hold_2025-10.csv  base_preds_hold_2026-05.csv  base_preds_val_2025-10.csv  base_preds_val_2026-05.csv  model_selection_diagnostic.csv  strategy_comparison_predictions.csv  zoo_hold_2025-10.csv  zoo_hold_2026-05.csv  zoo_val_2025-10.csv  zoo_val_2026-05.csv
data/raw/: typhoons.csv
forecasts/run_20260520/: metadata.json  predictions.csv
forecasts/run_20260525/: metadata.json  predictions.csv
forecasts/run_20260528/: metadata.json  predictions.csv
hourly/: README.md  analyze_hourly_patterns.py  sample_hourly_data.csv  split_hourly.py  utils.py
research/: backtest.py  compare_strategies.py  holiday_anchor.py  model_zoo_probe.py  optimize_mape.py  ratio_probe.py
v2/: _shared.py  plot_feature_importance.py  simple_ensemble.py  simple_lightgbm_bagged.py
v3/: _shared.py  hybrid_ensemble.py  simple_catboost.py  simple_lightgbm.py  simple_lightgbm_2stage.py  simple_lightgbm_l2.py  simple_neuralprophet.py  simple_xgboost.py
